--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -334,7 +334,7 @@ This simple structure plus the constraining elements form the building blocks of
 
 \paragraph{Formal approach and semantics.}
 
-A cornerstone of the framework is the generic representation of a constraint, which can often be done using \emph{Description Logics (DL)} \cite{Kroetzsch2012,Baader-2003,Baader-Nutt-2003}, as for the \emph{minimum qualified cardinality restrictions}: {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person.}}  This way, the knowledge representation formalism DL with its well-studied theoretical properties provides the foundational basis for the framework.
+A cornerstone of the framework is the generic representation of a constraint, which can often be done using Description Logics, as for the \emph{minimum qualified cardinality restriction} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person.}}  This way, the knowledge representation formalism \emph{Description Logics (DL)} \cite{Kroetzsch2012,Baader-2003,Baader-Nutt-2003} with its well-studied theoretical properties provides the foundational basis for the framework.
 
 It turned out that 64\% of the 81 constraint types are actually expressible in DL. Only for the remaining 36\%, other means, i.e., other constraining elements, had to be identified. This is not surprising if we consider that OWL is based on DL. When we talk about using DL to represent constraints, we have to establish once more that the semantics of OWL and DL differ from the semantics of constraint languages regarding the open world assumption (OWA) and the non-unique name assumption (nUNA). Both are usually assumed when dealing with OWL or DL, whereas validation usually assumes a closed world (CWA) and unique naming (UNA), i.e., if a desired property is missing, this leads to a violation and if two resources are named differently, they are assumed to be different resources. 
 
