--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -898,7 +898,7 @@ The framework and therefore the constraint types are implemented in exactly the 
 
 \subsection{Constraint Transformation}
 
-As stated in Section~\ref{sec:motivation}, we see a huge potential in the possibility to transform semantically equivalent constraints from one high-level constraint language to another via the RDF-CV representation, to avoid that every possible combination of constraint languages has to be mapped separately. The following SPIN inference rule exemplifies this approach and provides a mapping from RDF-CV back to an OWL 2 constraint:
+As stated in Section~\ref{sec:motivation}, we see a huge potential in the possibility to transform semantically equivalent constraints from one high-level constraint language to another via the RDF-CV representation, to avoid that every possible combination of constraint languages has to be mapped separately. The following SPIN inference rule exemplifies this approach and provides a mapping from RDF-CV back to the OWL 2 constraint of the type \emph{minimum qualified cardinality restrictions}:
 
 
 \begin{ex}
